name:               http-proxy
version:            0.1.1.0
license:            BSD3
license-file:       LICENSE
author:             Michael Snoyman, Erik de Castro Lopo
maintainer:         erikd@mega-nerd.com
homepage:           https://github.com/erikd/http-proxy
bug-reports:        https://github.com/erikd/http-proxy/issues
category:           Web
build-type:         Simple
cabal-version:      >= 1.10
stability:          Experimental
extra-source-files: ChangeLog.md  Readme.md

synopsis:           A library for writing HTTP and HTTPS proxies

description:
  http-proxy is a library for writing HTTP and HTTPS proxies.
  .
  Use of the Conduit library provides file streaming via the proxy in both
  directions. Memory usage of the proxy scales linearly with the number of
  simultaneous connections and is independent of the size of the files being
  uploaded or downloaded.
  .
  The Settings data type provided by the library allows the caller to supply
  a functions for exception reporting and request re-writing.  Eventually, this
  capability will be expanded to allow optional logging, disk caching etc.

source-repository head
  type:     git
  location: https://github.com/erikd/http-proxy.git

library
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs
  if os(windows)
      cpp-options:      -DWINDOWS

  exposed-modules:      Network.HTTP.Proxy
                        Network.HTTP.Proxy.Request

  build-depends:        base                    >= 4           && < 5
                      , async                   >= 2.0.2       && < 2.3
                      , blaze-builder           == 0.4.*
                      , bytestring              == 0.10.*
                      , bytestring-lexing       >= 0.4.3.3     && < 0.6
                      , case-insensitive        == 1.2.*
                      , conduit                 >= 1.2.5       && < 1.4
                      , conduit-extra           >= 1.1.9.1     && < 1.4
                      , http-client             >= 0.5.7.1     && < 0.7
                      , http-conduit            >= 2.2.4       && < 2.4
                      , http-types              >= 0.8.6       && < 0.13
                      , mtl                     >= 2.1.3.1     && < 2.3
                      , network                 >= 2.6.2.1     && < 3.2
                      , resourcet               >= 1.1.6       && < 1.3
                      , streaming-commons       >= 0.1.12.1    && < 0.3
                      , tls                     >= 1.2.18      && < 1.6
                      , text                    == 1.2.*
                      , transformers            == 0.5.*
                      , wai                     >= 3.0.3.0     && < 3.3
                      , wai-conduit             == 3.0.*
                      , warp                    >= 3.0.13.1    && < 3.4
                      , warp-tls                >= 3.0.4.2     && < 3.3



test-suite test
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall -fwarn-tabs -threaded -rtsopts "-with-rtsopts=-H1m -K1m"
  if os(windows)
      cpp-options:      -DWINDOWS
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              test.hs

  other-modules:        Test.Gen
                      , Test.Request
                      , Test.ServerDef
                      , Test.TestServer
                      , Test.Util
                      , Test.Wai

  build-depends:        base
                      , async
                      , blaze-builder
                      , bytestring
                      , bytestring-lexing
                      , case-insensitive
                      , conduit
                      , connection              >= 0.2
                      , conduit-extra
                      , http-client
                      , http-conduit
                      , http-proxy
                      , http-types
                      , hspec                   >= 2.1
                      , network
                      , QuickCheck              >= 2.7
                      , random                  >= 1.1
                      , resourcet
                      , text
                      , vault
                      , wai
                      , wai-conduit
                      , warp
                      , warp-tls

test-suite test-io
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall -fwarn-tabs -threaded -rtsopts "-with-rtsopts=-H1m -K1m"
  if os(windows)
      cpp-options:      -DWINDOWS
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              test-io.hs

  other-modules:        Test.Gen
                      , Test.Request
                      , Test.ServerDef
                      , Test.TestServer
                      , Test.Util
                      , Test.Wai

  build-depends:        base
                      , async
                      , blaze-builder
                      , bytestring
                      , bytestring-lexing
                      , case-insensitive
                      , conduit
                      , connection              >= 0.2
                      , conduit-extra
                      , http-client
                      , http-conduit
                      , http-proxy
                      , http-types
                      , hspec                   >= 2.1
                      , network
                      , QuickCheck              >= 2.7
                      , random                  >= 1.1
                      , resourcet
                      , text
                      , vault
                      , wai
                      , wai-conduit
                      , warp
                      , warp-tls

executable request-rewrite-proxy
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs -threaded -rtsopts "-with-rtsopts=-H1m -K1m"
  hs-source-dirs:       examples
  main-is:              request-rewrite-proxy.hs

  build-depends:        base
                      , bytestring
                      , http-proxy
                      , network-uri
                      , wai

executable simple-proxy
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs -threaded -rtsopts "-with-rtsopts=-H1m -K1m"
  hs-source-dirs:       examples
  main-is:              simple-proxy.hs

  build-depends:        base
                      , http-proxy
